Add appendix on advanced build and deploy techniques
Introduced 'appendix-g-advanced-build-deploy.md' covering advanced build and deployment strategies, including Maven/Gradle configuration, fat JAR creation, jpackage usage, platform-specific packaging, and troubleshooting. Also improved clarity and consistency in appendices A, C, D, F, and expanded chapter 16 with detailed learning objectives and prerequisites for multithreading.